k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-was-deployment
  labels:
    app: shopping-app
spec:
  replicas: 1 # pod 개수 지정 
  selector:
    matchLabels:
      app: shopping-app
  template:
    metadata:
      labels:
        app: shopping-app
    spec:
      containers:
      - name: shopping-container
        image: asia.gcr.io/eunoia0523/springshoppingcart:v1 
        ports:
        - containerPort: 8080
        resources:
          requests: ## 오토파일럿 모드에서 없으면 에러 발생 
            memory: "100Mi"
            cpu: "250m"
          limits: ## limit이 없으면 오토스케일링 문제 발생  
            cpu: "500m"
      nodeSelector:
        cloud.google.com/gke-nodepool: service-pool
