k8s/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-lb
spec:
  type: LoadBalancer 
  selector:
    node: service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
