k8s/svc-was-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-was-cip 
spec:
  selector:
    app: shopping-app
  ports:
    - name: tomcat
      protocol: TCP
      port: 8080
      targetPort: 8080
